# Embedded-Linux

./: README.md
AdminLinux_Task1/: first_bash_script.sh
AdminLinux_Task2/: main.c  readme.doc
AdminLinux_Task3/: trail.sh
AdminLinux_Task4/: readme.md  usergroup.sh
EmbeddedLinux_Task1/Calculator/dynamic/: allheaders.txt  debug.txt  disassembel.txt  dsym.txt  headers.txt  main  sym.txt
EmbeddedLinux_Task1/Calculator/dynamic/include/: math.h
EmbeddedLinux_Task1/Calculator/dynamic/lib/: addition.c  division.c  modulus.c  subtraction.c
EmbeddedLinux_Task1/Calculator/static/: allheaders.txt  debug.txt  headers.txt  main  main.c  sym.txt
EmbeddedLinux_Task3/: Installing The arm gcc cross compiler on our local machine.md
EmbeddedLinux_Task4/: Static libraries vs dynamic libraries in embedded systems.md
EmbeddedLinux_Task4/static/: DIO.c  DIO.h  PORTS.c  PORTS.h  PORTS_cfg.c  PORTS_cfg.h  TASK2.c  bitmath.h  delay.c  delay.h  main.elf  registers.h  typedef.h
EmbeddedLinux_Task5/: CMakeLists.txt
EmbeddedLinux_Task5/lib/: CMakeLists.txt  multiplication.c
EmbeddedLinux_Task6/: emulated_SD_card
Exam_1/: script_exercise.sh
embedded_fady/: .lec_3.swp
embedded_fady/lab-1/: Untitled 1.odt
embedded_fady/lab-2/: lec_3  task2.odt
embedded_fady/lab-3/: .~lock.emb1.odt#  Task5.odt  Task6.odt  Untitled 1.odt  emb1.odt  lab_3.odt
